[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scenes/Achievements.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Button.gd" type="Script" id=2]
[ext_resource path="res://Scenes/MusicPlayer.gd" type="Script" id=3]
[ext_resource path="res://Images/shopScene/arrow.png" type="Texture" id=4]
[ext_resource path="res://Music/Curse Of The Sphinx.wav" type="AudioStream" id=5]
[ext_resource path="res://Images/achievements/sprite_0.png" type="Texture" id=6]
[ext_resource path="res://Images/achievements/sprite_2.png" type="Texture" id=7]
[ext_resource path="res://Images/achievements/achievement.png" type="Texture" id=8]
[ext_resource path="res://Images/achievements/sprite_1.png" type="Texture" id=9]
[ext_resource path="res://Extras/pc.tres" type="DynamicFont" id=10]
[ext_resource path="res://Images/achievements/sprite_3.png" type="Texture" id=11]
[ext_resource path="res://Images/achievements/sprite_4.png" type="Texture" id=12]
[ext_resource path="res://Images/achievements/sprite_5.png" type="Texture" id=13]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[node name="Achievements" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 270.0
margin_bottom = 540.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 165.0
margin_bottom = 165.0
rect_scale = Vector2( 0.3, 0.3 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
icon = ExtResource( 4 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0
autoplay = true
bus = "Music"
script = ExtResource( 3 )

[node name="AchivementMainNode" type="Control" parent="."]
margin_top = 60.0
margin_right = 40.0
margin_bottom = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="AchivementMainNode"]
margin_left = 11.337
margin_top = 82.0
margin_right = 264.337
margin_bottom = 419.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Achievements" type="VBoxContainer" parent="AchivementMainNode/ScrollContainer"]
margin_right = 216.0
margin_bottom = 677.0
custom_constants/separation = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stars" type="TextureRect" parent="AchivementMainNode/ScrollContainer/Achievements"]
margin_right = 216.0
margin_bottom = 92.0
texture = ExtResource( 8 )

[node name="Logo" type="TextureRect" parent="AchivementMainNode/ScrollContainer/Achievements/Stars"]
margin_left = 11.1118
margin_top = 10.3181
margin_right = 75.1118
margin_bottom = 74.3181
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="AchivementMainNode/ScrollContainer/Achievements/Stars"]
margin_left = 90.0
margin_top = 25.0
margin_right = 186.0
margin_bottom = 60.0
custom_fonts/font = ExtResource( 10 )
text = "Get 50
 Stars"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Points" type="TextureRect" parent="AchivementMainNode/ScrollContainer/Achievements"]
margin_top = 117.0
margin_right = 216.0
margin_bottom = 209.0
texture = ExtResource( 8 )

[node name="Logo" type="TextureRect" parent="AchivementMainNode/ScrollContainer/Achievements/Points"]
margin_left = 10.3181
margin_top = 12.6992
margin_right = 74.3181
margin_bottom = 76.6992
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="AchivementMainNode/ScrollContainer/Achievements/Points"]
margin_left = 90.0
margin_top = 25.0
margin_right = 202.0
margin_bottom = 60.0
custom_fonts/font = ExtResource( 10 )
text = "Get 500
Points"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Coins" type="TextureRect" parent="AchivementMainNode/ScrollContainer/Achievements"]
margin_top = 234.0
margin_right = 216.0
margin_bottom = 326.0
texture = ExtResource( 8 )

[node name="Logo" type="TextureRect" parent="AchivementMainNode/ScrollContainer/Achievements/Coins"]
margin_left = 12.6992
margin_top = 12.6992
margin_right = 76.6992
margin_bottom = 76.6992
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="AchivementMainNode/ScrollContainer/Achievements/Coins"]
margin_left = 85.0
margin_top = 25.0
margin_right = 213.0
margin_bottom = 60.0
custom_fonts/font = ExtResource( 10 )
text = "Collect
50 coins"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rocks" type="TextureRect" parent="AchivementMainNode/ScrollContainer/Achievements"]
margin_top = 351.0
margin_right = 216.0
margin_bottom = 443.0
texture = ExtResource( 8 )

[node name="Logo" type="TextureRect" parent="AchivementMainNode/ScrollContainer/Achievements/Rocks"]
margin_left = 12.6992
margin_top = 12.6992
margin_right = 76.6992
margin_bottom = 76.6992
texture = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="AchivementMainNode/ScrollContainer/Achievements/Rocks"]
margin_left = 85.0
margin_top = 25.0
margin_right = 213.0
margin_bottom = 60.0
custom_fonts/font = ExtResource( 10 )
text = "Break
20 Rocks"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spells" type="TextureRect" parent="AchivementMainNode/ScrollContainer/Achievements"]
margin_top = 468.0
margin_right = 216.0
margin_bottom = 560.0
texture = ExtResource( 8 )

[node name="Logo" type="TextureRect" parent="AchivementMainNode/ScrollContainer/Achievements/Spells"]
margin_left = 12.6992
margin_top = 12.6992
margin_right = 76.6992
margin_bottom = 76.6992
texture = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="AchivementMainNode/ScrollContainer/Achievements/Spells"]
margin_left = 85.0
margin_top = 25.0
margin_right = 213.0
margin_bottom = 60.0
custom_fonts/font = ExtResource( 10 )
text = "Use 25
spells"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="All_Spells" type="TextureRect" parent="AchivementMainNode/ScrollContainer/Achievements"]
margin_top = 585.0
margin_right = 216.0
margin_bottom = 677.0
texture = ExtResource( 8 )

[node name="Logo" type="TextureRect" parent="AchivementMainNode/ScrollContainer/Achievements/All_Spells"]
margin_left = 12.6992
margin_top = 12.6992
margin_right = 76.6992
margin_bottom = 76.6992
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="AchivementMainNode/ScrollContainer/Achievements/All_Spells"]
margin_left = 85.0
margin_top = 25.0
margin_right = 213.0
margin_bottom = 60.0
rect_scale = Vector2( 0.6, 0.6 )
custom_fonts/font = ExtResource( 10 )
text = "Use all the
spells at the
same time"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="AchivementMainNode"]
margin_left = -15.0
margin_top = 20.0
margin_right = 225.0
margin_bottom = 40.0
rect_scale = Vector2( 1.25, 1.5 )
custom_fonts/font = ExtResource( 10 )
text = "Achievements"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleShadow" type="Label" parent="AchivementMainNode/Title"]
margin_left = 26.1814
margin_top = -0.0148849
margin_right = 218.181
margin_bottom = 15.9851
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0.905882, 0.254902, 0.254902, 1 )
text = "Achievements"
__meta__ = {
"_edit_use_anchors_": false
}
